# pico-chip8

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
ST7735S/: CMakeLists.txt
ST7735S/include/ST7735S/: display.h
ST7735S/src/: display.cpp
chip8/: CMakeLists.txt
chip8/include/chip8/: display.h  error.h  machine.h  memory.h  registers.h  stack.h
chip8/src/: instructions.cpp  machine.cpp  memory.cpp  registers.cpp  stack.cpp
tools/: as8.py  console.py  flush.sh
